crates/tokio-otp/tests/ui/topology/double_define.stderr
error[E0382]: use of moved value: `slot`
  --> tests/ui/topology/double_define.rs:18:20
   |
16 |     let (slot, _worker) = builder.slot::<()>("worker");
   |          ---- move occurs because `slot` has type `ActorSlot<()>`, which does not implement the `Copy` trait
17 |     builder.define(slot, || Worker);
   |                    ---- value moved here
18 |     builder.define(slot, || Worker);
   |                    ^^^^ value used here after move
