crates/tokio-otp/tests/ui/topology/double_define.rs
use tokio_otp::{ActorContext, ActorResult, GraphBuilder, Actor};

#[derive(Clone)]
struct Worker;

impl Actor for Worker {
    type Msg = ();

    async fn handle(&mut self, _message: (), _ctx: &ActorContext<()>) -> ActorResult {
        Ok(tokio_otp::prelude::Continue)
    }
}

fn main() {
    let mut builder = GraphBuilder::new();
    let (slot, _worker) = builder.slot::<()>("worker");
    builder.define(slot, || Worker);
    builder.define(slot, || Worker);
}
